--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <h1>Hello world</h1>
-
+<div>
     <p id='demo'></p>
+</div>
 
-
-    <button>random kleur generator</button>
+    <button class="button">random kleur generator</button>
     <script src="index.js">
         document.getElementById('demo').innerHTML
     </script>
