--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <p id='demo'></p>
 </div>
 
+<div>
+    <p id='palette'></p>
+</div>
+
     <button class="button">random kleur generator</button>
     <script src="index.js">
         document.getElementById('demo').innerHTML
