--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>Hello world</h1>
+   <a href="https://stephancar.github.io/sites/index.html">Verschillende sites</a>
+
 <div>
     <p id='demo'></p>
 </div>
