--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
-   <a href="https://stephancar.github.io/sites/index.html">Verschillende sites</a>
+   <h2><a href="https://stephancar.github.io/sites/index.html">Verschillende sites</a></h2>
 
 <div>
     <p id='demo'></p>
