--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
             width: 500px;
             margin: 0;
         
-            border: 1px solid #000000;
+            border: 1px solid #FFFFFF;
         }
     </style>
 </head>
