--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <style> 
         h1 {
             font-family: Arial, Helvetica, sans-serif;
-            font-size: xx-large;
+            font-size: 10vw;
         }
         a {
             font-family: Arial, Helvetica, sans-serif;
