--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <h1>Hello world</h1>
-   <h2><a href="https://stephancar.github.io/index2.html">Verschillende sites</a></h2>
+   <h2>
+       <a href="https://stephancar.github.io/index2.html">Verschillende sites</a>
+       <a href="https://stephancar.github.io/untitled1.html">ik weet het niet</a>
+    </h2>
 
 <div>
     <p id='demo'></p>
