--- a/Untitled1.html
+++ b/Untitled1.html
@@ -25,7 +25,7 @@
     <div class="ex1">
        <p>
            Ik weet het niet Eva,
-           <a href="http://google.com">google het</a>
+           <a href="http://google.com">Google het.</a>
 
        </p>
     </div>
