--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello world</h1>
    <h2>
        <a href="https://stephancar.github.io/index2.html">Verschillende sites</a>
-       <a href="https://stephancar.github.io/untitled1.html">ik weet het niet</a>
+       <a href="https://stephancar.github.io/Untitled1.html">ik weet het niet</a>
     </h2>
 
 <div>
