--- a/Untitled1.html
+++ b/Untitled1.html
@@ -14,10 +14,8 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         div.ex1 {
-            width: 500px;
+            width: 100%;
             margin: 0;
-        
-            border: 1px solid #FFFFFF;
         }
     </style>
 </head>
