--- a/Untitled1.html
+++ b/Untitled1.html
@@ -10,7 +10,7 @@
             font-size: xx-large;
         }
         p {
-            font-size: 100pt;
+            font-size: xx-large;
             font-family: Arial, Helvetica, sans-serif;
         }
         div.ex1 {
