--- a/koffie.html
+++ b/koffie.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>De impact van slechte koffie op de mentale gezondheid</title>
-  
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>  
 <script>
 var xArray = [50,60,70,80,90,100,110,120,130,140,150];
 var yArray = [7,8,8,9,9,9,10,11,14,14,15];
