--- a/koffie.html
+++ b/koffie.html
@@ -23,10 +23,10 @@
    De test werd op regelmatige basis uitgevoerd wanneer de testpersoon op kantoor was.
   </p>
   <h2>
-    Schematische voorstelling van koffie
+    Schematische voorstelling van depressieve klachten door slechte koffie
   </h2>
 
-  <div id="myPlot" style="width:100%;max-width:700px"></div>  
+  <div id="myPlot" style="width:100%"></div>  
   
     <script>
 var xArray = [50,60,70,80,90,100,110,120,130,140,150];
