--- a/koffie.html
+++ b/koffie.html
@@ -5,11 +5,21 @@
 
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>  
 
+<style>
+h1{font-size: 26pt
+}
+h2{font-size: 22pt
+}
+p{font-size: 18pt
+}
+a{font-size: 18pt
+}
+</style>
 
 </head>
 
 <body style=font-family:"helvetica">
-<div style="width: 95%">
+<div style="width: 95%, max-width: 1200pt">
 <h1>
   De impact van slechte koffie op de mentale gezondheid
   </h1>
@@ -26,7 +36,7 @@
     Schematische voorstelling van depressieve klachten door slechte koffie
   </h2>
 
-  <div id="myPlot" style="width:100%"></div>  
+  <div id="myPlot" style="width:100%, margin:auto"></div>  
   
     <script>
 var xArray = [50,60,70,80,90,100,110,120,130,140,150];
